MODON MRE BPDEV/force-app/main/default/objects/ServiceCatalog__c/ServiceCatalog__c.object-meta.xml
<CustomObject>
    <label>Service Catalog</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Catelog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>