MODON MRE BPDEV/force-app/main/default/objects/ServiceCatalog__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>