MODON MRE BPDEV/force-app/main/default/objects/ServiceCatalog__c/fields/Service_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Type__c</fullName>
    <label>Service Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM Registration</fullName>
            </value>
            <value>
                <fullName>Service Request Management -JO</fullName>
            </value>
            <value>
                <fullName>Service Request Management -Property Transfer Title Deed</fullName>
            </value>
            <value>
                <fullName>Property Transfer OffPlan</fullName>
            </value>
            <value>
                <fullName>Joint Owner Addition And Deletion</fullName>
            </value>
            <value>
                <fullName>Joint Owner Deletion</fullName>
            </value>
            <value>
                <fullName>Property Transfer Title Deed</fullName>
            </value>
            <value>
                <fullName>Request Payment Extension</fullName>
            </value>
            <value>
                <fullName>Milestone Update</fullName>
            </value>
            <value>
                <fullName>Joint Owner Title Deed</fullName>
            </value>
            <value>
                <fullName>Payment Plan Swap</fullName>
            </value>
            <value>
                <fullName>Unit Upgrade</fullName>
            </value>
            <value>
                <fullName>Unit Consolidation</fullName>
            </value>
            <value>
                <fullName>Unit Swap</fullName>
            </value>
            <value>
                <fullName>Broker Registration</fullName>
            </value>
            <value>
                <fullName>Default SR</fullName>
            </value>
            <value>
                <fullName>Default Unit Cancellation</fullName>
            </value>
            <value>
                <fullName>LPC Waiver</fullName>
            </value>
            <value>
                <fullName>Plot Handover</fullName>
            </value>
            <value>
                <fullName>Property Transfer Title Deed (Commercial)</fullName>
            </value>
            <value>
                <fullName>Unit Home Preview</fullName>
            </value>
            <value>
                <fullName>Unit Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Unit Handover</fullName>
            </value>
            <value>
                <fullName>Mortgage Discharge</fullName>
            </value>
            <value>
                <fullName>Mortgage Registration</fullName>
            </value>
            <value>
                <fullName>Payment Readiness</fullName>
            </value>
            <value>
                <fullName>Pre Unit Cancellation</fullName>
            </value>
            <value>
                <fullName>Post Unit Cancellation</fullName>
            </value>
            <value>
                <fullName>Unit Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>