MODON MRE BPDEV/force-app/main/default/objects/ServiceCatalog__c/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <label>Steps</label>
    <summaryForeignKey>ServiceAction__c.ServiceCatalog__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>