MODON MRE BPDEV/force-app/main/default/objects/ServiceCatalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>ProcessType__c</columns>
    <columns>Service_Request_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>